--- a/HTML/Dasmoto-art project/Resources/dasmoto.css
+++ b/HTML/Dasmoto-art project/Resources/dasmoto.css
@@ -1,6 +1,6 @@
 body {
     font-family: Helvetica;
-    margin: 10px 4px;
+    margin: 10px 7px;
     line-height: 1.5;
 }
 
@@ -11,8 +11,51 @@ body {
     background-image: url(./pattern.jpeg);
     text-align: center;
     height: 150px;
+    margin: 10px 0;
 }
 
 .Title h1 {
     padding-bottom: 30px;
+}
+
+#BrushesTitle {
+    font-size: 25px;
+    font-weight: bold;
+    background-color: mediumspringgreen;
+    color: white;
+}
+
+#AvailableBrushes {
+    font-weight: bold;
+    color: blue;
+    display: inline;
+    background: none;
+}
+
+#FramesTitle {
+    font-size: 25px;
+    font-weight: bold;
+    background-color: lightcoral;
+    color: white;
+}
+
+#StartingFrames {
+    font-weight: bold;
+    color: blue;
+    display: inline;
+    background: none;
+}
+
+#PaintTitle {
+    font-size: 25px;
+    font-weight: bold;
+    background-color: skyblue;
+    color: white;
+}
+
+#StartingPaint {
+    font-weight: bold;
+    color: blue;
+    display: inline;
+    background: none;
 }
