--- a/Flask2/templates/index.html
+++ b/Flask2/templates/index.html
@@ -3,12 +3,63 @@
 <!DOCTYPE html>
 
 {% block head%}
-<title>{{ username }}</title>
+<title>Main page</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 {% endblock %}
 
 {% block body %}
-<p>hola</p>
+
+<div class="store-grid">
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+    <div class="card">
+        <h2>Element</h2>
+        <p>This is a placeholder description</p>
+    </div>
+</div>
+
 {% endblock %}
 
 </html>
