--- a/Flask2/static/style.css
+++ b/Flask2/static/style.css
@@ -2,3 +2,54 @@ body {
     margin: 0;
     font-family: sans-serif;
 }
+
+.nav-header {
+    border: 2px solid white;
+    border-radius: 1%;
+    background-color: rgb(156, 46, 46);
+}
+
+.title-header {
+    display: inline-block;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-weight: bold;
+}
+
+.header-links {
+    display: inline-block;
+    padding-right: 10px;
+    padding-left: 10px;
+    color: white;
+    text-decoration: underline;
+}
+
+.my-cart {
+    margin-top: 25px;
+    margin-bottom: auto;
+    margin-right: 30px;
+    float: inline-end;
+    color: white;
+    font-weight: bold;
+}
+
+.card {
+    border: 2px solid white;
+    border-radius: 10px;
+    background-color: gray;
+    text-align: center;
+    margin: 5px;
+    width: auto;
+    height: 250px;
+}
+
+.store-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    border: 1px solid rgb(156, 46, 46);
+    border-radius: 10px;
+    margin: 10px;
+    padding: 5px;
+    justify-content: center;
+}
