changes made to flask application

--- a/Flask2/templates/user.html
+++ b/Flask2/templates/user.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block head%}
-
+<title>User portal</title>
 {% endblock %}
 
 {% block body %}
-    <h1>Welcome, {{ username }}!</h1>
+    <h1>Welcome, {{user}}!</h1>
 {% endblock %}
