--- a/Flask2/templates/index.html
+++ b/Flask2/templates/index.html
@@ -13,7 +13,7 @@
     <div class="card">
         <h2>Element</h2>
         <p>This is a placeholder description</p>
-        <p>{% guitar1.getname %}</p>
+        <p>{{ value[0] }}</p>
     </div>
     <div class="card">
         <h2>Element</h2>
